--- a/.github/workflows/keep-supabase-alive.yml
+++ b/.github/workflows/keep-supabase-alive.yml
@@ -13,16 +13,28 @@ jobs:
     steps:
       - name: Ping Database 1
         run: |
-          curl -X GET \
-            '${{ secrets.SUPABASE_URL_1 }}/rest/v1/' \
+          response=$(curl -s -w "\n%{http_code}" -X GET \
+            '${{ secrets.SUPABASE_URL_1 }}/rest/v1/keep_alive?select=id&limit=1' \
             -H "apikey: ${{ secrets.SUPABASE_KEY_1 }}" \
-            -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY_1 }}"
-          echo "Database 1 pinged successfully"
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY_1 }}")
+          http_code=$(echo "$response" | tail -n1)
+          if [ "$http_code" = "200" ]; then
+            echo "Database 1 pinged successfully (HTTP $http_code)"
+          else
+            echo "Database 1 ping failed (HTTP $http_code)"
+            exit 1
+          fi
 
       - name: Ping Database 2
         run: |
-          curl -X GET \
-            '${{ secrets.SUPABASE_URL_2 }}/rest/v1/' \
+          response=$(curl -s -w "\n%{http_code}" -X GET \
+            '${{ secrets.SUPABASE_URL_2 }}/rest/v1/keep_alive?select=id&limit=1' \
             -H "apikey: ${{ secrets.SUPABASE_KEY_2 }}" \
-            -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY_2 }}"
-          echo "Database 2 pinged successfully"
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY_2 }}")
+          http_code=$(echo "$response" | tail -n1)
+          if [ "$http_code" = "200" ]; then
+            echo "Database 2 pinged successfully (HTTP $http_code)"
+          else
+            echo "Database 2 ping failed (HTTP $http_code)"
+            exit 1
+          fi
